fix height on overflow

--- a/public/input.css
+++ b/public/input.css
@@ -35,10 +35,10 @@
   border-radius: 100vw;
 }
 
-.full-screen {
-  min-height: -moz-available;
-  min-height: -webkit-fill-available;
-  min-height: fill-available;
+.full-screen, body {
+  height: -moz-available;
+  height: -webkit-fill-available;
+  height: fill-available;
 }
 
 @media only screen and (max-width: 640px) {
