--- a/public/output.css
+++ b/public/output.css
@@ -654,10 +654,6 @@ body {
   height: 2.5rem;
 }
 
-.min-h-screen {
-  min-height: 100vh;
-}
-
 .w-8 {
   width: 2rem;
 }
@@ -907,10 +903,10 @@ body {
   border-radius: 100vw;
 }
 
-.full-screen {
-  min-height: -moz-available;
-  min-height: -webkit-fill-available;
-  min-height: fill-available;
+.full-screen, body {
+  height: -moz-available;
+  height: -webkit-fill-available;
+  height: fill-available;
 }
 
 @media only screen and (max-width: 640px) {
